# e_commerce_taller

./: README.md  ejercicio_e_commerce.ipynb  pyproject.toml
