[project]
name = "taller-e-commerce"
version = "0.1.0"
description = ""
authors = [
    {name = "Sebasan1709",email = "sbstnangel@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.3.4,<3.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "xgboost (>=3.1.1,<4.0.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "jupyterlab (>=4.4.10,<5.0.0)",
    "notebook (>=7.4.7,<8.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
